# SDP

./: .gitignore  CMakeLists.txt  README.md  algorithms.cpp  main.cpp  task1-1.cpp
ArbitraryTrees/: ArbitraryTree.cpp  ArbitraryTree.h
BinaryTrees/: AVL.cpp  AVL.h  BinaryTree.cpp  BinaryTree.h  RandomTree.cpp  RandomTree.h
CircularList/: CircularList.cpp  CircularList.h
Classes/exercises/: Car.cpp  Car.h  CarContainer.cpp  CarContainer.h  Intersection.cpp  Intersection.h  main.cpp
Classes/exercises/hw1/: BigElevator.cpp  BigElevator.h  Car.cpp  Car.h  Intersection.cpp  Intersection.h  QuadraticEquation.cpp  QuadraticEquation.h  mainIntersection.cpp
Classes/practicum/: ComplexNumber.cpp  ComplexNumber.h  Worker.h  main.cpp
Dictionaries/: dicts.cpp
Double Linked List/: DLL.cpp  DLL.h
DynamicTemplate/: DynamicTemplateQueue.cpp  DynamicTemplateStack.cpp
Graph/: AdjacencyListGraph.cpp  AdjacencyListGraph.h  Graph.cpp  Graph.h  MatrixGraph.cpp  MatrixGraph.h
Hash/: HashTable.cpp  HashTable.h
Inheritance/: Commander.h  General.cpp  General.h  Soldier.h
Linked-Lists/: LinkedList.cpp  LinkedList.h
OldExams/: main.cpp  nekuv-kod.cpp  random.cpp
PriorityQueue/: main.cpp
Queue/: queue.cpp
String/: String.cpp  String.h
Structures/exercises/: Appliances.h  IntArray.h  exercise1.cpp
Structures/practicum1/: ComplexNumber.h  Employee.h  struct_practicum1.cpp
Structures/practicum2/: Warrior.h  structures_practicum2.cpp
Vector/: main.cpp
