cmake_minimum_required(VERSION 3.20)
project(OOP_2022_tasks)

set(CMAKE_CXX_STANDARD 23)


add_executable(SDP
#        "Double Linked List/DLL.cpp"
#        CircularList/CircularList.cpp
        BinaryTrees/BinaryTree.cpp
#        Queue/queue.cpp
        #        BinaryTrees/AVL.cpp
#        BinaryTrees/AVL.h
#                BinaryTrees/BinaryTree.h
#        BinaryTrees/RandomTree.cpp
#        BinaryTrees/RandomTree.h
#        Vector/main.cpp
#        Graph/AdjacencyListGraph.cpp
#        Graph/AdjacencyListGraph.h
#        Graph/MatrixGraph.cpp
#        Graph/MatrixGraph.h
#        main.cpp
#        Linked-Lists/LinkedList.cpp
        #        CircularList/CircularList.h)
#add_executable(SDP
)
#        algorithms.cpp
#            main.cpp)
#        String/String.h)