cmake_minimum_required(VERSION 3.20)
project(OOP_2022_tasks)

set(CMAKE_CXX_STANDARD 23)


add_executable(SDP
#        "Double Linked List/DLL.cpp"
#        CircularList/CircularList.cpp
#        BinaryTrees/BinaryTree.cpp
#        Dictionaries/dicts.cpp
#        DynamicTemplate/DynamicTemplate.cpp
        #        Hash/HashTable.cpp
        #        Hash/HashTable.cpp
#        Hash/HashTable.h
#        ArbitraryTrees/ArbitraryTree.cpp
#        DynamicTemplate/DynamicTemplateStack.cpp
        #        ArbitraryTrees/ArbitraryTree.h
#        OldExams/random.cpp
                Queue/queue.cpp
#                BinaryTrees/AVL.cpp
#        BinaryTrees/AVL.h
#                BinaryTrees/BinaryTree.h
#        BinaryTrees/RandomTree.cpp
#        BinaryTrees/RandomTree.h
#        Vector/main.cpp
#        Graph/AdjacencyListGraph.cpp
#        Graph/AdjacencyListGraph.h
#        Graph/Graph.cpp
#        Graph/Graph.h
#        OldExams/main.cpp
#        PriorityQueue/main.cpp
#        OldExams/nekuv-kod.cpp
        #        Graph/MatrixGraph.cpp
#        Graph/MatrixGraph.h
#        task1-1.cpp
#        main.cpp
#        Linked-Lists/LinkedList.cpp
        #        CircularList/CircularList.h)
#add_executable(SDP
)
#        algorithms.cpp
#            main.cpp)
#        String/String.h)